# CS-2D-GUI

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Release - 快捷方式.lnk  bin - 快捷方式.lnk
src/: analysis_widget.cpp  analysis_widget.h  cplex_param_widget.cpp  cplex_param_widget.h  cutting_view_dialog.cpp  cutting_view_dialog.h  cutting_view_widget.cpp  cutting_view_widget.h  difficulty_mapper.cpp  difficulty_mapper.h  generator_widget.cpp  generator_widget.h  generator_worker.cpp  generator_worker.h  log_widget.cpp  log_widget.h  main.cpp  main_window.cpp  main_window.h  parameter_widget.cpp  parameter_widget.h  results_widget.cpp  results_widget.h  solver_worker.cpp  solver_worker.h
